// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BossProfitScreen DOM 스냅샷 (ADR-094 결정 4) > 빈 상태 — 페이지 헤더·탭·기간 네비게이터의 기하 1`] = `
"<div class="fixed inset-x-0 top-0 z-10 bg-bg px-4 pt-[calc(1rem+var(--sa-top))] pb-2">
<div class="space-y-4">
<div class="flex items-center justify-between">
<h1 class="text-lg font-semibold text-text">보스 수익</h1>
<button type="button" class="text-sm font-medium text-text-muted hover:text-text">히스토리</button>
</div>
<div class="flex items-center gap-4">
<button type="button" class="rounded-full bg-primary-tint px-3 py-[5px] text-sm font-semibold text-primary-ink">주간</button>
<button type="button" class="px-3 text-sm font-medium text-text-muted">월간</button>
</div>
<div class="flex items-center justify-center gap-4">
<button type="button" aria-label="이전 기간" class="flex h-7 w-7 items-center justify-center rounded-full border border-border text-text disabled:opacity-30">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left h-4 w-4" aria-hidden="true">
<path d="m15 18-6-6 6-6">
</path>
</svg>
</button>
<div class="text-center">
<p class="text-sm font-semibold text-text">7월 2주차</p>
<p class="mt-0.5 text-xs text-text-muted tabular-nums">7월 9일 ~ 7월 15일</p>
</div>
<button type="button" aria-label="다음 기간" class="flex h-7 w-7 items-center justify-center rounded-full border border-border text-text disabled:opacity-30">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-4 w-4" aria-hidden="true">
<path d="m9 18 6-6-6-6">
</path>
</svg>
</button>
</div>
</div>
</div>
<div class="-mt-[var(--sa-top)] space-y-4">
<div aria-hidden="true" style="height: 0px;">
</div>
<div data-testid="pull-content" class="space-y-2 px-4 pb-4" style="transition: transform 300ms cubic-bezier(0.22, 1, 0.36, 1);">
<div data-testid="empty-state" class="flex flex-col items-center gap-3 rounded-[14px] border border-border bg-surface px-4 py-8 text-center">
<div data-testid="empty-state-badge" aria-hidden="true" class="flex items-center justify-center rounded-full bg-primary-tint h-14 w-14">
<svg data-testid="profit-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="text-primary-ink h-7 w-7">
<ellipse cx="16.3" cy="6.4" rx="5.2" ry="2.2">
</ellipse>
<path d="M11.1 6.4v3.7">
</path>
<path d="M21.5 6.4v8.2">
</path>
<path d="M11.1 9.1a5.2 2.2 0 0 0 10.4 0">
</path>
<path d="M13.4 13.7A5.2 2.2 0 0 0 21.5 11.85">
</path>
<path d="M13.7 16.5A5.2 2.2 0 0 0 21.5 14.6">
</path>
<circle cx="8" cy="15" r="5.5">
</circle>
</svg>
</div>
<div class="space-y-1">
<p data-testid="empty-state-title" class="font-semibold text-text text-sm">아직 처치한 보스가 없습니다</p>
<p data-testid="empty-state-description" class="mx-auto max-w-[240px] text-xs text-text-muted">보스를 처치하면 수익이 자동으로 집계됩니다</p>
</div>
</div>
</div>
</div>"
`;

exports[`BossProfitScreen DOM 스냅샷 (ADR-094 결정 4) > 여러 캐릭터 · 펼침 — 형제 카드가 섞였을 때의 순서와 z 층 1`] = `
"<div class="fixed inset-x-0 top-0 z-10 bg-bg px-4 pt-[calc(1rem+var(--sa-top))] pb-2">
<div class="space-y-4">
<div class="flex items-center justify-between">
<h1 class="text-lg font-semibold text-text">보스 수익</h1>
<button type="button" class="text-sm font-medium text-text-muted hover:text-text">히스토리</button>
</div>
<div class="flex items-center gap-4">
<button type="button" class="rounded-full bg-primary-tint px-3 py-[5px] text-sm font-semibold text-primary-ink">주간</button>
<button type="button" class="px-3 text-sm font-medium text-text-muted">월간</button>
</div>
<div class="flex items-center justify-center gap-4">
<button type="button" aria-label="이전 기간" class="flex h-7 w-7 items-center justify-center rounded-full border border-border text-text disabled:opacity-30">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left h-4 w-4" aria-hidden="true">
<path d="m15 18-6-6 6-6">
</path>
</svg>
</button>
<div class="text-center">
<p class="text-sm font-semibold text-text">7월 2주차</p>
<p class="mt-0.5 text-xs text-text-muted tabular-nums">7월 9일 ~ 7월 15일</p>
</div>
<button type="button" aria-label="다음 기간" class="flex h-7 w-7 items-center justify-center rounded-full border border-border text-text disabled:opacity-30">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-4 w-4" aria-hidden="true">
<path d="m9 18 6-6-6-6">
</path>
</svg>
</button>
</div>
<div>
<div class="relative flex h-6 items-center">
<p class="text-xs font-semibold tracking-wide text-text-muted">7월 2주차 총 수익</p>
</div>
<div class="mt-1.5 flex items-center gap-2.5">
<span class="flex h-8 w-8 shrink-0 items-center justify-center rounded-full bg-primary-tint text-primary-ink">
<svg data-testid="profit-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-[18px] w-[18px]" aria-hidden="true">
<ellipse cx="16.3" cy="6.4" rx="5.2" ry="2.2">
</ellipse>
<path d="M11.1 6.4v3.7">
</path>
<path d="M21.5 6.4v8.2">
</path>
<path d="M11.1 9.1a5.2 2.2 0 0 0 10.4 0">
</path>
<path d="M13.4 13.7A5.2 2.2 0 0 0 21.5 11.85">
</path>
<path d="M13.7 16.5A5.2 2.2 0 0 0 21.5 14.6">
</path>
<circle cx="8" cy="15" r="5.5">
</circle>
</svg>
</span>
<p class="text-xl font-extrabold leading-none tabular-nums text-primary-ink">22,000,000 <span class="text-xs font-bold text-text-muted">메소</span>
</p>
<span aria-label="7월 1주차에는 수익이 없었습니다. 2,200만 메소 증가" class="ml-2 flex h-5 flex-none items-center gap-0.5 rounded-full px-1.5 text-[11px] font-bold leading-none tabular-nums bg-rise-tint text-rise-ink">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-up h-2.5 w-2.5 flex-none" aria-hidden="true">
<path d="m5 12 7-7 7 7">
</path>
<path d="M12 19V5">
</path>
</svg>2,200만</span>
</div>
<div class="mt-3 h-px bg-border" aria-hidden="true">
</div>
</div>
</div>
</div>
<div class="-mt-[var(--sa-top)] space-y-4">
<div aria-hidden="true" style="height: 0px;">
</div>
<div data-testid="pull-content" class="space-y-2 px-4 pb-4" style="transition: transform 300ms cubic-bezier(0.22, 1, 0.36, 1);">
<div class="relative isolate">
<div class="overflow-clip rounded-[14px] bg-surface border border-border">
<button type="button" class="sticky z-[5] flex w-full items-center gap-3 bg-surface px-4 py-3" style="top: 0px;">
<span class="relative flex h-10 w-10 shrink-0 items-center justify-center">
<span class="relative h-8 w-8 overflow-hidden rounded-full bg-surface-2">
<span class="flex h-full w-full items-center justify-center text-xs font-bold text-text">낟</span>
</span>
<svg viewBox="0 0 40 40" class="pointer-events-none absolute inset-0 h-full w-full rotate-90 -scale-x-100" role="img" aria-label="주간 보스 처치 1 / 12">
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-primary" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-1.25">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-11.067477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-20.884954084936208">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-30.70243112740431">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-40.519908169872416">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-50.33738521234052">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-60.15486225480862">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-69.97233929727673">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-79.78981633974483">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-89.60729338221293">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-99.42477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-109.24224746714914">
</circle>
</svg>
</span>
<span class="flex-1 truncate text-left text-sm font-semibold text-text">낟낟</span>
<span class="relative text-sm font-bold text-text tabular-nums">10,000,000 메소</span>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-up h-4 w-4 text-text-muted" aria-hidden="true">
<path d="m18 15-6-6-6 6">
</path>
</svg>
</button>
<div class="border-t border-border">
<ul>
<li class="flex items-start gap-3 p-4 border-b border-border last:border-b-transparent">
<div role="img" aria-label="자쿰" title="자쿰" style="width: 40px; height: 40px; background-image: url(&quot;/src/assets/bosses/zakum.webp&quot;); background-size: 220%; background-position: 60% 40%; background-repeat: no-repeat;" class="shrink-0 rounded-full">
</div>
<div class="flex-1 min-w-0">
<button type="button" aria-label="자쿰 카오스 드롭 아이템 관리" class="flex h-6 w-full items-center gap-1.5 text-left">
<span class="inline-flex items-center rounded-full text-[10px] font-extrabold tracking-[.03em]" style="height: 20px; padding: 0px 10px; background: linear-gradient(180deg, rgb(60, 60, 60), rgb(34, 31, 31)); border: 1px solid rgb(202, 168, 127); color: rgb(240, 216, 184);">카오스</span>
<span class="truncate text-sm font-semibold text-text">자쿰</span>
<span class="ml-auto inline-flex h-6 flex-none items-center rounded-full border border-dashed border-primary bg-primary-tint px-2.5 text-[11px] font-bold text-primary-ink">＋ 드롭 추가</span>
</button>
<div class="flex items-center justify-between gap-2 mt-2">
<div class="inline-flex items-center gap-2 rounded-full border border-border px-1 py-0.5">
<button type="button" aria-label="낟낟 자쿰 카오스 파티원 수 감소" class="flex h-[18px] w-[18px] items-center justify-center rounded-full bg-surface-2 text-text disabled:opacity-40">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-minus h-3 w-3" aria-hidden="true">
<path d="M5 12h14">
</path>
</svg>
</button>
<span class="text-xs tabular-nums text-text">2</span>
<button type="button" aria-label="낟낟 자쿰 카오스 파티원 수 증가" class="flex h-[18px] w-[18px] items-center justify-center rounded-full bg-surface-2 text-text disabled:opacity-40">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plus h-3 w-3" aria-hidden="true">
<path d="M5 12h14">
</path>
<path d="M12 5v14">
</path>
</svg>
</button>
</div>
<span class="text-sm font-semibold text-text tabular-nums">5,000,000 메소</span>
</div>
</div>
</li>
</ul>
</div>
</div>
</div>
<div class="relative isolate">
<div class="">
<button type="button" class="flex w-full items-center gap-3 rounded-[14px] bg-surface border border-border px-4 py-3">
<span class="relative flex h-10 w-10 shrink-0 items-center justify-center">
<span class="relative h-8 w-8 overflow-hidden rounded-full bg-surface-2">
<span class="flex h-full w-full items-center justify-center text-xs font-bold text-text">두</span>
</span>
<svg viewBox="0 0 40 40" class="pointer-events-none absolute inset-0 h-full w-full rotate-90 -scale-x-100" role="img" aria-label="주간 보스 처치 1 / 12">
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-primary" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-1.25">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-11.067477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-20.884954084936208">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-30.70243112740431">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-40.519908169872416">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-50.33738521234052">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-60.15486225480862">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-69.97233929727673">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-79.78981633974483">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-89.60729338221293">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-99.42477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-109.24224746714914">
</circle>
</svg>
</span>
<span class="flex-1 truncate text-left text-sm font-semibold text-text">두번째</span>
<span class="relative text-sm font-bold text-text tabular-nums">12,000,000 메소</span>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-down h-4 w-4 text-text-muted" aria-hidden="true">
<path d="m6 9 6 6 6-6">
</path>
</svg>
</button>
</div>
</div>
</div>
</div>"
`;

exports[`BossProfitScreen DOM 스냅샷 (ADR-094 결정 4) > 월간 탭 — 주간과 다른 본문 구조 1`] = `
"<div class="fixed inset-x-0 top-0 z-10 bg-bg px-4 pt-[calc(1rem+var(--sa-top))] pb-2">
<div class="space-y-4">
<div class="flex items-center justify-between">
<h1 class="text-lg font-semibold text-text">보스 수익</h1>
<button type="button" class="text-sm font-medium text-text-muted hover:text-text">히스토리</button>
</div>
<div class="flex items-center gap-4">
<button type="button" class="px-3 text-sm font-medium text-text-muted">주간</button>
<button type="button" class="rounded-full bg-primary-tint px-3 py-[5px] text-sm font-semibold text-primary-ink">월간</button>
<div class="ml-auto flex shrink-0 items-center gap-2">
<p class="text-sm text-text-muted whitespace-nowrap">동기화 기록 없음</p>
<button type="button" aria-label="새로고침" class="flex h-[30px] w-[30px] items-center justify-center text-primary-ink hover:text-primary-hover">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-refresh-cw h-4 w-4" aria-hidden="true">
<path d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8">
</path>
<path d="M21 3v5h-5">
</path>
<path d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16">
</path>
<path d="M8 16H3v5">
</path>
</svg>
</button>
</div>
</div>
<div class="flex items-center justify-center gap-4">
<button type="button" aria-label="이전 기간" class="flex h-7 w-7 items-center justify-center rounded-full border border-border text-text disabled:opacity-30">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left h-4 w-4" aria-hidden="true">
<path d="m15 18-6-6 6-6">
</path>
</svg>
</button>
<div class="text-center">
<p class="text-sm font-semibold text-text">지난 달</p>
<p class="mt-0.5 text-xs text-text-muted tabular-nums">2026년 7월</p>
</div>
<button type="button" aria-label="다음 기간" class="flex h-7 w-7 items-center justify-center rounded-full border border-border text-text disabled:opacity-30">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-4 w-4" aria-hidden="true">
<path d="m9 18 6-6-6-6">
</path>
</svg>
</button>
</div>
<div>
<div class="relative flex h-6 items-center">
<p class="text-xs font-semibold tracking-wide text-text-muted">지난 달 총 수익</p>
<span role="img" aria-label="월간 결정석 1개" class="ml-2 flex h-5 flex-none items-center gap-1 rounded-full bg-primary-tint px-1.5">
<img alt="" class="h-4 w-4 flex-none object-contain" src="/src/assets/items/intense_power_crystal_monthly.webp">
<span class="text-xs font-bold leading-none tabular-nums text-primary-ink">1<span class="font-semibold opacity-70">개</span>
</span>
</span>
</div>
<div class="mt-1.5 flex items-center gap-2.5">
<span class="flex h-8 w-8 shrink-0 items-center justify-center rounded-full bg-primary-tint text-primary-ink">
<svg data-testid="profit-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-[18px] w-[18px]" aria-hidden="true">
<ellipse cx="16.3" cy="6.4" rx="5.2" ry="2.2">
</ellipse>
<path d="M11.1 6.4v3.7">
</path>
<path d="M21.5 6.4v8.2">
</path>
<path d="M11.1 9.1a5.2 2.2 0 0 0 10.4 0">
</path>
<path d="M13.4 13.7A5.2 2.2 0 0 0 21.5 11.85">
</path>
<path d="M13.7 16.5A5.2 2.2 0 0 0 21.5 14.6">
</path>
<circle cx="8" cy="15" r="5.5">
</circle>
</svg>
</span>
<p class="text-xl font-extrabold leading-none tabular-nums text-primary-ink">5,000,000 <span class="text-xs font-bold text-text-muted">메소</span>
</p>
<span aria-label="2026년 6월에는 수익이 없었습니다. 500만 메소 증가" class="ml-2 flex h-5 flex-none items-center gap-0.5 rounded-full px-1.5 text-[11px] font-bold leading-none tabular-nums bg-rise-tint text-rise-ink">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-up h-2.5 w-2.5 flex-none" aria-hidden="true">
<path d="m5 12 7-7 7 7">
</path>
<path d="M12 19V5">
</path>
</svg>500만</span>
</div>
<div class="mt-3 h-px bg-border" aria-hidden="true">
</div>
</div>
</div>
</div>
<div class="-mt-[var(--sa-top)] space-y-4">
<div aria-hidden="true" style="height: 0px;">
</div>
<div data-testid="pull-content" class="space-y-2 px-4 pb-4" style="transition: transform 300ms cubic-bezier(0.22, 1, 0.36, 1);">
<div class="relative isolate">
<div class="">
<button type="button" class="flex w-full items-center gap-3 rounded-[14px] bg-surface border border-border px-4 py-3">
<span class="relative flex h-10 w-10 shrink-0 items-center justify-center">
<span class="relative h-8 w-8 overflow-hidden rounded-full bg-surface-2">
<span class="flex h-full w-full items-center justify-center text-xs font-bold text-text">낟</span>
</span>
<svg viewBox="0 0 40 40" class="pointer-events-none absolute inset-0 h-full w-full rotate-90 -scale-x-100" role="img" aria-label="월간 보스 처치 1 / 1">
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-primary">
</circle>
</svg>
</span>
<span class="flex-1 truncate text-left text-sm font-semibold text-text">낟낟</span>
<span class="relative text-sm font-bold text-text tabular-nums">5,000,000 메소</span>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-down h-4 w-4 text-text-muted" aria-hidden="true">
<path d="m6 9 6 6 6-6">
</path>
</svg>
</button>
</div>
</div>
</div>
</div>"
`;

exports[`BossProfitScreen DOM 스냅샷 (ADR-094 결정 4) > 주간 탭 · 카드 접힘 — sticky 헤더와 카드 층 순서 1`] = `
"<div class="fixed inset-x-0 top-0 z-10 bg-bg px-4 pt-[calc(1rem+var(--sa-top))] pb-2">
<div class="space-y-4">
<div class="flex items-center justify-between">
<h1 class="text-lg font-semibold text-text">보스 수익</h1>
<button type="button" class="text-sm font-medium text-text-muted hover:text-text">히스토리</button>
</div>
<div class="flex items-center gap-4">
<button type="button" class="rounded-full bg-primary-tint px-3 py-[5px] text-sm font-semibold text-primary-ink">주간</button>
<button type="button" class="px-3 text-sm font-medium text-text-muted">월간</button>
</div>
<div class="flex items-center justify-center gap-4">
<button type="button" aria-label="이전 기간" class="flex h-7 w-7 items-center justify-center rounded-full border border-border text-text disabled:opacity-30">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left h-4 w-4" aria-hidden="true">
<path d="m15 18-6-6 6-6">
</path>
</svg>
</button>
<div class="text-center">
<p class="text-sm font-semibold text-text">7월 2주차</p>
<p class="mt-0.5 text-xs text-text-muted tabular-nums">7월 9일 ~ 7월 15일</p>
</div>
<button type="button" aria-label="다음 기간" class="flex h-7 w-7 items-center justify-center rounded-full border border-border text-text disabled:opacity-30">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-4 w-4" aria-hidden="true">
<path d="m9 18 6-6-6-6">
</path>
</svg>
</button>
</div>
<div>
<div class="relative flex h-6 items-center">
<p class="text-xs font-semibold tracking-wide text-text-muted">7월 2주차 총 수익</p>
</div>
<div class="mt-1.5 flex items-center gap-2.5">
<span class="flex h-8 w-8 shrink-0 items-center justify-center rounded-full bg-primary-tint text-primary-ink">
<svg data-testid="profit-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-[18px] w-[18px]" aria-hidden="true">
<ellipse cx="16.3" cy="6.4" rx="5.2" ry="2.2">
</ellipse>
<path d="M11.1 6.4v3.7">
</path>
<path d="M21.5 6.4v8.2">
</path>
<path d="M11.1 9.1a5.2 2.2 0 0 0 10.4 0">
</path>
<path d="M13.4 13.7A5.2 2.2 0 0 0 21.5 11.85">
</path>
<path d="M13.7 16.5A5.2 2.2 0 0 0 21.5 14.6">
</path>
<circle cx="8" cy="15" r="5.5">
</circle>
</svg>
</span>
<p class="text-xl font-extrabold leading-none tabular-nums text-primary-ink">13,000,000 <span class="text-xs font-bold text-text-muted">메소</span>
</p>
<span aria-label="7월 1주차에는 수익이 없었습니다. 1,300만 메소 증가" class="ml-2 flex h-5 flex-none items-center gap-0.5 rounded-full px-1.5 text-[11px] font-bold leading-none tabular-nums bg-rise-tint text-rise-ink">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-up h-2.5 w-2.5 flex-none" aria-hidden="true">
<path d="m5 12 7-7 7 7">
</path>
<path d="M12 19V5">
</path>
</svg>1,300만</span>
</div>
<div class="mt-3 h-px bg-border" aria-hidden="true">
</div>
</div>
</div>
</div>
<div class="-mt-[var(--sa-top)] space-y-4">
<div aria-hidden="true" style="height: 0px;">
</div>
<div data-testid="pull-content" class="space-y-2 px-4 pb-4" style="transition: transform 300ms cubic-bezier(0.22, 1, 0.36, 1);">
<div class="relative isolate">
<div class="">
<button type="button" class="flex w-full items-center gap-3 rounded-[14px] bg-surface border border-border px-4 py-3">
<span class="relative flex h-10 w-10 shrink-0 items-center justify-center">
<span class="relative h-8 w-8 overflow-hidden rounded-full bg-surface-2">
<span class="flex h-full w-full items-center justify-center text-xs font-bold text-text">낟</span>
</span>
<svg viewBox="0 0 40 40" class="pointer-events-none absolute inset-0 h-full w-full rotate-90 -scale-x-100" role="img" aria-label="주간 보스 처치 2 / 12">
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-primary" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-1.25">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-primary" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-11.067477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-20.884954084936208">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-30.70243112740431">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-40.519908169872416">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-50.33738521234052">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-60.15486225480862">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-69.97233929727673">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-79.78981633974483">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-89.60729338221293">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-99.42477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-109.24224746714914">
</circle>
</svg>
</span>
<span class="flex-1 truncate text-left text-sm font-semibold text-text">낟낟</span>
<span class="relative text-sm font-bold text-text tabular-nums">13,000,000 메소</span>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-down h-4 w-4 text-text-muted" aria-hidden="true">
<path d="m6 9 6 6 6-6">
</path>
</svg>
</button>
</div>
</div>
</div>
</div>"
`;

exports[`BossProfitScreen DOM 스냅샷 (ADR-094 결정 4) > 주간 탭 · 카드 펼침 — 카드 안 sticky 헤더(ADR-047)와 보스 행 1`] = `
"<div class="fixed inset-x-0 top-0 z-10 bg-bg px-4 pt-[calc(1rem+var(--sa-top))] pb-2">
<div class="space-y-4">
<div class="flex items-center justify-between">
<h1 class="text-lg font-semibold text-text">보스 수익</h1>
<button type="button" class="text-sm font-medium text-text-muted hover:text-text">히스토리</button>
</div>
<div class="flex items-center gap-4">
<button type="button" class="rounded-full bg-primary-tint px-3 py-[5px] text-sm font-semibold text-primary-ink">주간</button>
<button type="button" class="px-3 text-sm font-medium text-text-muted">월간</button>
</div>
<div class="flex items-center justify-center gap-4">
<button type="button" aria-label="이전 기간" class="flex h-7 w-7 items-center justify-center rounded-full border border-border text-text disabled:opacity-30">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-left h-4 w-4" aria-hidden="true">
<path d="m15 18-6-6 6-6">
</path>
</svg>
</button>
<div class="text-center">
<p class="text-sm font-semibold text-text">7월 2주차</p>
<p class="mt-0.5 text-xs text-text-muted tabular-nums">7월 9일 ~ 7월 15일</p>
</div>
<button type="button" aria-label="다음 기간" class="flex h-7 w-7 items-center justify-center rounded-full border border-border text-text disabled:opacity-30">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right h-4 w-4" aria-hidden="true">
<path d="m9 18 6-6-6-6">
</path>
</svg>
</button>
</div>
<div>
<div class="relative flex h-6 items-center">
<p class="text-xs font-semibold tracking-wide text-text-muted">7월 2주차 총 수익</p>
</div>
<div class="mt-1.5 flex items-center gap-2.5">
<span class="flex h-8 w-8 shrink-0 items-center justify-center rounded-full bg-primary-tint text-primary-ink">
<svg data-testid="profit-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-[18px] w-[18px]" aria-hidden="true">
<ellipse cx="16.3" cy="6.4" rx="5.2" ry="2.2">
</ellipse>
<path d="M11.1 6.4v3.7">
</path>
<path d="M21.5 6.4v8.2">
</path>
<path d="M11.1 9.1a5.2 2.2 0 0 0 10.4 0">
</path>
<path d="M13.4 13.7A5.2 2.2 0 0 0 21.5 11.85">
</path>
<path d="M13.7 16.5A5.2 2.2 0 0 0 21.5 14.6">
</path>
<circle cx="8" cy="15" r="5.5">
</circle>
</svg>
</span>
<p class="text-xl font-extrabold leading-none tabular-nums text-primary-ink">13,000,000 <span class="text-xs font-bold text-text-muted">메소</span>
</p>
<span aria-label="7월 1주차에는 수익이 없었습니다. 1,300만 메소 증가" class="ml-2 flex h-5 flex-none items-center gap-0.5 rounded-full px-1.5 text-[11px] font-bold leading-none tabular-nums bg-rise-tint text-rise-ink">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-up h-2.5 w-2.5 flex-none" aria-hidden="true">
<path d="m5 12 7-7 7 7">
</path>
<path d="M12 19V5">
</path>
</svg>1,300만</span>
</div>
<div class="mt-3 h-px bg-border" aria-hidden="true">
</div>
</div>
</div>
</div>
<div class="-mt-[var(--sa-top)] space-y-4">
<div aria-hidden="true" style="height: 0px;">
</div>
<div data-testid="pull-content" class="space-y-2 px-4 pb-4" style="transition: transform 300ms cubic-bezier(0.22, 1, 0.36, 1);">
<div class="relative isolate">
<div class="overflow-clip rounded-[14px] bg-surface border border-border">
<button type="button" class="sticky z-[5] flex w-full items-center gap-3 bg-surface px-4 py-3" style="top: 0px;">
<span class="relative flex h-10 w-10 shrink-0 items-center justify-center">
<span class="relative h-8 w-8 overflow-hidden rounded-full bg-surface-2">
<span class="flex h-full w-full items-center justify-center text-xs font-bold text-text">낟</span>
</span>
<svg viewBox="0 0 40 40" class="pointer-events-none absolute inset-0 h-full w-full rotate-90 -scale-x-100" role="img" aria-label="주간 보스 처치 2 / 12">
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-primary" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-1.25">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-primary" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-11.067477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-20.884954084936208">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-30.70243112740431">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-40.519908169872416">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-50.33738521234052">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-60.15486225480862">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-69.97233929727673">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-79.78981633974483">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-89.60729338221293">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-99.42477042468104">
</circle>
<circle cx="20" cy="20" r="18.75" fill="none" stroke-width="2.5" stroke-linecap="round" class="stroke-border" stroke-dasharray="4.917477042468104 112.89224746714913" stroke-dashoffset="-109.24224746714914">
</circle>
</svg>
</span>
<span class="flex-1 truncate text-left text-sm font-semibold text-text">낟낟</span>
<span class="relative text-sm font-bold text-text tabular-nums">13,000,000 메소</span>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-up h-4 w-4 text-text-muted" aria-hidden="true">
<path d="m18 15-6-6-6 6">
</path>
</svg>
</button>
<div class="border-t border-border">
<ul>
<li class="flex items-start gap-3 p-4 border-b border-border last:border-b-transparent">
<div role="img" aria-label="자쿰" title="자쿰" style="width: 40px; height: 40px; background-image: url(&quot;/src/assets/bosses/zakum.webp&quot;); background-size: 220%; background-position: 60% 40%; background-repeat: no-repeat;" class="shrink-0 rounded-full">
</div>
<div class="flex-1 min-w-0">
<button type="button" aria-label="자쿰 카오스 드롭 아이템 관리" class="flex h-6 w-full items-center gap-1.5 text-left">
<span class="inline-flex items-center rounded-full text-[10px] font-extrabold tracking-[.03em]" style="height: 20px; padding: 0px 10px; background: linear-gradient(180deg, rgb(60, 60, 60), rgb(34, 31, 31)); border: 1px solid rgb(202, 168, 127); color: rgb(240, 216, 184);">카오스</span>
<span class="truncate text-sm font-semibold text-text">자쿰</span>
<span class="ml-auto inline-flex h-6 flex-none items-center rounded-full border border-dashed border-primary bg-primary-tint px-2.5 text-[11px] font-bold text-primary-ink">＋ 드롭 추가</span>
</button>
<div class="flex items-center justify-between gap-2 mt-2">
<div class="inline-flex items-center gap-2 rounded-full border border-border px-1 py-0.5">
<button type="button" aria-label="낟낟 자쿰 카오스 파티원 수 감소" class="flex h-[18px] w-[18px] items-center justify-center rounded-full bg-surface-2 text-text disabled:opacity-40">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-minus h-3 w-3" aria-hidden="true">
<path d="M5 12h14">
</path>
</svg>
</button>
<span class="text-xs tabular-nums text-text">2</span>
<button type="button" aria-label="낟낟 자쿰 카오스 파티원 수 증가" class="flex h-[18px] w-[18px] items-center justify-center rounded-full bg-surface-2 text-text disabled:opacity-40">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plus h-3 w-3" aria-hidden="true">
<path d="M5 12h14">
</path>
<path d="M12 5v14">
</path>
</svg>
</button>
</div>
<span class="text-sm font-semibold text-text tabular-nums">5,000,000 메소</span>
</div>
</div>
</li>
<li class="flex items-start gap-3 p-4 border-b border-border last:border-b-transparent">
<div title="반 레온" aria-label="반 레온" style="width: 40px; height: 40px;" class="flex shrink-0 items-center justify-center rounded-full bg-surface-2 text-xs text-text-muted">?</div>
<div class="flex-1 min-w-0">
<button type="button" aria-label="반 레온 하드 드롭 아이템 관리" class="flex h-6 w-full items-center gap-1.5 text-left">
<span class="inline-flex items-center rounded-full text-[10px] font-extrabold tracking-[.03em]" style="height: 20px; padding: 0px 10px; background: linear-gradient(180deg, rgb(231, 132, 166), rgb(192, 75, 116)); border: 1px solid rgb(156, 58, 92); color: rgb(255, 255, 255); text-shadow: 0 1px 1px rgba(0,0,0,.25);">하드</span>
<span class="truncate text-sm font-semibold text-text">반 레온</span>
<span class="ml-auto inline-flex h-6 flex-none items-center rounded-full border border-dashed border-primary bg-primary-tint px-2.5 text-[11px] font-bold text-primary-ink">＋ 드롭 추가</span>
</button>
<div class="flex items-center justify-between gap-2 mt-2">
<div class="inline-flex items-center gap-2 rounded-full border border-border px-1 py-0.5">
<button type="button" aria-label="낟낟 반 레온 하드 파티원 수 감소" class="flex h-[18px] w-[18px] items-center justify-center rounded-full bg-surface-2 text-text disabled:opacity-40">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-minus h-3 w-3" aria-hidden="true">
<path d="M5 12h14">
</path>
</svg>
</button>
<span class="text-xs tabular-nums text-text">2</span>
<button type="button" aria-label="낟낟 반 레온 하드 파티원 수 증가" class="flex h-[18px] w-[18px] items-center justify-center rounded-full bg-surface-2 text-text disabled:opacity-40">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plus h-3 w-3" aria-hidden="true">
<path d="M5 12h14">
</path>
<path d="M12 5v14">
</path>
</svg>
</button>
</div>
<span class="text-sm font-semibold text-text tabular-nums">3,000,000 메소</span>
</div>
</div>
</li>
</ul>
</div>
</div>
</div>
</div>
</div>"
`;

exports[`BossProfitScreen DOM 스냅샷 (ADR-094 결정 4) > 추적 캐릭터 없음 — 조기 반환 경로(주 렌더와 다른 트리) 1`] = `
"<div class="flex min-h-[calc(100dvh-var(--sa-top)-var(--sa-bottom)-4rem)] flex-col p-4">
<h1 class="text-lg font-semibold text-text">보스 수익</h1>
<div class="flex flex-1 flex-col items-center justify-center">
<div data-testid="empty-state" class="flex flex-col items-center gap-4 text-center">
<div data-testid="empty-state-badge" aria-hidden="true" class="flex items-center justify-center rounded-full bg-primary-tint h-[84px] w-[84px]">
<svg data-testid="empty-state-leaf" width="42" height="43" viewBox="0 0 127 130" class="fill-primary-ink">
<path d="M60.4426 107.504L59.1392 127.924C59.1024 128.5 59.5598 128.987 60.1372 128.987H65.9593C66.5534 128.987 67.0165 128.472 66.9537 127.882L64.785 107.496C64.6975 106.673 65.5908 106.106 66.2984 106.536L78.2704 113.805C78.4651 113.923 78.6944 113.971 78.9203 113.941L103.215 110.732C104.008 110.628 104.363 109.681 103.835 109.081L91.452 94.9894C91.0117 94.4885 91.1759 93.7052 91.7802 93.4231L118.529 80.9405C119.315 80.5738 119.293 79.4491 118.494 79.1126L112.061 76.4041C111.526 76.1789 111.295 75.5471 111.558 75.0296L125.96 46.675C126.366 45.8757 125.596 44.9873 124.747 45.275L98.4688 54.1831C97.9655 54.3537 97.4167 54.1008 97.2193 53.6074L95.2595 48.7079C94.9641 47.9693 93.9662 47.8547 93.5109 48.5071L82.408 64.4213C81.7836 65.3163 80.3814 64.7067 80.6101 63.6396L88.1353 28.5217C88.311 27.7019 87.4603 27.0428 86.7103 27.4178L81.4218 30.062C80.9453 30.3003 80.3657 30.1231 80.1038 29.6592L63.9299 1.00826C63.5499 0.335101 62.5824 0.329222 62.1943 0.997712L45.543 29.6749C45.2779 30.1315 44.7033 30.3033 44.231 30.0672L38.9323 27.4178C38.1823 27.0428 37.3315 27.7018 37.5072 28.5217L44.9884 63.4338C45.2189 64.5095 43.7966 65.1145 43.1815 64.2025L32.5593 48.4523C32.1246 47.8077 31.1528 47.884 30.824 48.5885L28.4482 53.6797C28.2334 54.14 27.7076 54.3661 27.2258 54.2055L1.8202 45.7369C0.98094 45.4572 0.218491 46.3249 0.603813 47.1212L14.1413 75.0988C14.3797 75.5913 14.1779 76.184 13.6884 76.4287L7.43998 79.553C6.68865 79.9286 6.70724 81.0071 7.47107 81.3567L33.8706 93.4379C34.4733 93.7136 34.6458 94.4888 34.217 94.9941L22.2282 109.124C21.7222 109.72 22.0657 110.64 22.8386 110.759L46.6876 114.428C46.9344 114.466 47.1865 114.41 47.3943 114.272L58.8899 106.608C59.5787 106.149 60.4953 106.678 60.4426 107.504Z">
</path>
</svg>
</div>
<div class="space-y-1">
<p data-testid="empty-state-title" class="font-semibold text-text text-base">추적 중인 캐릭터가 없습니다</p>
<p data-testid="empty-state-description" class="max-w-[220px] text-sm text-text-muted">보스 스케줄러에서 캐릭터를 선택하면 수익 현황을 확인할 수 있습니다</p>
</div>
<button type="button" class="rounded-full bg-primary font-semibold text-on-primary hover:bg-primary-hover px-5 py-2.5 text-sm">캐릭터 선택하러 가기</button>
</div>
</div>
</div>"
`;
